# knapsacksolver

./: .bazelrc  .gitattributes  .ycm_extra_conf.py  .~lock.minknap_combo_easy.csv#  CMakeLists.txt  LICENSE  README.md  WORKSPACE  balknap_combo_easy.csv  balknap_difficult-large.csv  bellman_list_easy.csv  expknap_fontan_easy.csv  minknap_combo_difficult-large.csv  minknap_combo_difficult-small.csv  minknap_combo_easy.csv  minknap_easy.csv  requirements.txt
DynamicProgramming/: BUILD  It.cpp  ItBench.py  List.cpp  ListBench.py  Map.cpp  MapBench.py  Rec.cpp  RecBench.py  Test.cpp
Lib/: BUILD  Instance.cpp  Instance.hpp  Parser.cpp  Parser.hpp  ParserTest.cpp  PartialInstance.cpp  PartialInstance.hpp  Solution.cpp  Solution.hpp  Test.cpp  Tools.cpp  Tools.hpp
TestInstances/: 2_larger_items.txt  3_full_items.txt  5_items.txt  empty.txt
bench/: bab_easy.csv  balknap.json  balknap_combo.json  balknap_combo_normal.csv  balknap_difficult-small.csv  balknap_difficultlarge.csv  balknap_easy.csv  balknap_normal.csv  balknap_t_difficult-small.csv  balknap_t_difficultlarge.csv  balknap_t_difficultsmall.csv  balknap_t_easy.csv  bellman_array_all_easy.csv  bellman_array_easy.csv  bellman_array_part_easy.csv  bellman_array_rec_difficult-small.csv  bellman_array_rec_easy.csv  bellman_array_rec_normal.csv  bellman_list_easy.csv  bellman_list_rec.json  bellman_list_rec_normal.csv  bellman_list_sort_difficult-small.csv  bellman_list_sort_easy.csv  bellmanpar_array_easy.csv  bellmanrec_easy.csv  branch_and_bound_primal_dual.json  branch_and_bound_primal_dual_difficultlarge.csv  branch_and_bound_primal_dual_easy.csv  combo.json  combo_difficultlarge.csv  combo_difficultsmall.csv  combo_easy.csv  combo_normal.csv  dynamic_programming_balancing.json  dynamic_programming_balancing_difficultsmall.csv  dynamic_programming_balancing_easy.csv  dynamic_programming_bellman_array_all_easy.csv  dynamic_programming_bellman_array_part_easy.csv  dynamic_programming_bellman_rec_easy.csv  dynamic_programming_primal_dual_combo.json  (+28 more)
data/: BUILD
data_tests/: 3_items_1-2.txt.sol  3_items_2.txt.sol  4_items_sc.txt  4_items_sc.txt.sol  5_items_1-3.txt  5_items_2-3-4.txt  5_items_2-3-4.txt.sol  5_items_full.txt  6_items_0-3-4-5.txt  6_items_0-3-4-5.txt.sol  6_items_sc.txt  7_items_3-4-5-6.txt  7_items_3-4-5-6.txt.sol  7_items_kellerer21.txt.sol
knapsacksolver/: BUILD  bench.cpp  generator.cpp  generator.hpp  generator_main.cpp  instance.cpp  instance.hpp  main.cpp  part_solution_1.hpp  part_solution_2.hpp  solution.cpp  solution.hpp  sort_bench.cpp  test.cpp  test_main.cpp  tester.cpp  tester.hpp  variables.bzl
lb_greedy/: BUILD  greedy.cpp  greedy.hpp  main.cpp  test.cpp
lb_greedynlogn/: BUILD  greedynlogn.cpp  greedynlogn.hpp  main.cpp  test.cpp
lb_ls/: BUILD  ls.cpp  ls.hpp  main.cpp
lib/: BUILD  algorithms.cpp  algorithms.hpp  bench.cpp  binary_solution.hpp  generator.cpp  generator.hpp  generator_main.cpp  instance.cpp  instance.hpp  main.cpp  part_solution_1.hpp  part_solution_2.hpp  solution.cpp  solution.hpp  solver.cpp  solver.hpp  sort_bench.cpp  test.cpp  test_main.cpp  tester.cpp  tester.hpp  update_bounds.hpp
multiplechoicesubsetsumsolver/: BUILD  README.md  instance.cpp  instance.hpp  main.cpp  solution.cpp  solution.hpp
opt_astar/: BUILD  astar.cpp  astar.hpp  test.cpp
opt_bab/: BUILD  bab.cpp  bab.hpp  main.cpp  test.cpp
opt_babprimaldual/: BUILD  babprimaldual.cpp  babprimaldual.hpp  main.cpp  test.cpp
opt_babstar/: BUILD  bab.cpp  bab.hpp  main.cpp  test.cpp
opt_balknap/: BUILD  balknap.cpp  balknap.hpp  balknap_array.cpp  balknap_list.cpp  main.cpp  test.cpp
opt_bellman/: BUILD  bellman.cpp  bellman.hpp  bellman_1_bench.py  bellman_1_bench_2.py  bellman_1_main.cpp  bellman_2_main.cpp  bellman_array.cpp  bellman_array.hpp  bellman_list.cpp  bellman_list.hpp  it.cpp  it.hpp  it_bench.py  it_main.cpp  main.cpp  map.cpp  map_bench.py  rec.cpp  rec_bench.py  rec_bench2.py  res.ods  stack.cpp  stack_bench.py  stack_bench2.py  test.cpp
opt_dpprofits/: BUILD  dpprofits.cpp  dpprofits.hpp  dpprofits_array.cpp  dpprofits_array.hpp  dpprofits_list.cpp  dpprofits_list.hpp  main.cpp  test.cpp
opt_dpreaching/: BUILD  dpreaching.cpp  dpreaching.hpp  main.cpp  test.cpp
opt_expknap/: BUILD  expknap.cpp  expknap.hpp  main.cpp  test.cpp
opt_minknap/: BUILD  main.cpp  minknap.cpp  minknap.hpp  minknap_part.cpp  test.cpp
python/: BUILD  knapsacksolver.cpp
scripts/: download_data.py  run_tests.py
src/: CMakeLists.txt  algorithm_formatter.cpp  generator.cpp  instance.cpp  instance_builder.cpp  main.cpp  solution.cpp  sort.cpp  tests.cpp  upper_bound.cpp
src/algorithms/: CMakeLists.txt  dynamic_programming_bellman.cpp  dynamic_programming_primal_dual.cpp  greedy.cpp  surrogate_relaxation.cpp  upper_bound_dantzig.cpp
src/knapsack/: CMakeLists.txt  algorithm_formatter.cpp  generator_main.cpp  instance.cpp  instance_builder.cpp  main.cpp  solution.cpp  tests.cpp
src/knapsack/algorithms/: CMakeLists.txt  dynamic_programming_bellman.cpp  dynamic_programming_primal_dual.cpp  greedy.cpp  surrogate_relaxation.cpp  upper_bound_dantzig.cpp
src/multiple_choice_subset_sum/: CMakeLists.txt  algorithm_formatter.cpp  instance.cpp  main.cpp
src/multiple_choice_subset_sum/algorithms/: CMakeLists.txt  dynamic_programming_bellman.cpp
src/subset_sum/: CMakeLists.txt  generator.cpp  generator_main.cpp  instance_builder.cpp  main.cpp  solution.cpp  tests.cpp
src/subset_sum/algorithms/: CMakeLists.txt  dynamic_programming_balancing.cpp  dynamic_programming_bellman.cpp
subsetsumsolver/: BUILD  README.md  algorithms.cpp  generator.cpp  generator.hpp  generator_main.cpp  instance.cpp  instance.hpp  main.cpp  solution.cpp  solution.hpp
test/: CMakeLists.txt
test/algorithms/: CMakeLists.txt  dynamic_programming_bellman_test.cpp  dynamic_programming_primal_dual_test.cpp
test/knapsack/algorithms/: CMakeLists.txt  dynamic_programming_bellman_test.cpp  dynamic_programming_primal_dual_test.cpp
test/subset_sum/algorithms/: CMakeLists.txt  dynamic_programming_bellman_test.cpp
ub_dembo/: BUILD  (+1 more)
(+252 files in other folders)
