add_library(KnapsackSolver_multiple_choice_subset_sum_dynamic_programming_bellman)
target_sources(KnapsackSolver_multiple_choice_subset_sum_dynamic_programming_bellman PRIVATE
    dynamic_programming_bellman.cpp)
target_include_directories(KnapsackSolver_multiple_choice_subset_sum_dynamic_programming_bellman PUBLIC
    ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(KnapsackSolver_multiple_choice_subset_sum_dynamic_programming_bellman PUBLIC
    KnapsackSolver_multiple_choice_subset_sum)
add_library(KnapsackSolver::knapsack::dynamic_programming_bellman ALIAS KnapsackSolver_multiple_choice_subset_sum_dynamic_programming_bellman)
