add_library(KnapsackSolver_subset_sum_dynamic_programming_bellman)
target_sources(KnapsackSolver_subset_sum_dynamic_programming_bellman PRIVATE
    dynamic_programming_bellman.cpp)
target_include_directories(KnapsackSolver_subset_sum_dynamic_programming_bellman PUBLIC
    ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(KnapsackSolver_subset_sum_dynamic_programming_bellman PUBLIC
    KnapsackSolver_subset_sum)
add_library(KnapsackSolver::knapsack::dynamic_programming_bellman ALIAS KnapsackSolver_subset_sum_dynamic_programming_bellman)

add_library(KnapsackSolver_subset_sum_dynamic_programming_balancing)
target_sources(KnapsackSolver_subset_sum_dynamic_programming_balancing PRIVATE
    dynamic_programming_balancing.cpp)
target_include_directories(KnapsackSolver_subset_sum_dynamic_programming_balancing PUBLIC
    ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(KnapsackSolver_subset_sum_dynamic_programming_balancing PUBLIC
    KnapsackSolver_subset_sum)
add_library(KnapsackSolver::knapsack::dynamic_programming_balancing ALIAS KnapsackSolver_subset_sum_dynamic_programming_balancing)

add_library(KnapsackSolver_subset_sum_dynamic_programming_primal_dual)
target_sources(KnapsackSolver_subset_sum_dynamic_programming_primal_dual PRIVATE
    dynamic_programming_primal_dual.cpp)
target_include_directories(KnapsackSolver_subset_sum_dynamic_programming_primal_dual PUBLIC
    ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(KnapsackSolver_subset_sum_dynamic_programming_primal_dual PUBLIC
    KnapsackSolver_subset_sum)
add_library(KnapsackSolver::knapsack::dynamic_programming_primal_dual ALIAS KnapsackSolver_subset_sum_dynamic_programming_primal_dual)
