add_executable(KnapsackSolver_knapsack_dynamic_programming_bellman_test)
target_sources(KnapsackSolver_knapsack_dynamic_programming_bellman_test PRIVATE
    dynamic_programming_bellman_test.cpp)
target_link_libraries(KnapsackSolver_knapsack_dynamic_programming_bellman_test
    KnapsackSolver_knapsack_dynamic_programming_bellman
    KnapsackSolver_knapsack_tests
    GTest::gtest_main)
gtest_discover_tests(KnapsackSolver_knapsack_dynamic_programming_bellman_test)

add_executable(KnapsackSolver_knapsack_dynamic_programming_primal_dual_test)
target_sources(KnapsackSolver_knapsack_dynamic_programming_primal_dual_test PRIVATE
    dynamic_programming_primal_dual_test.cpp)
target_link_libraries(KnapsackSolver_knapsack_dynamic_programming_primal_dual_test
    KnapsackSolver_knapsack_dynamic_programming_primal_dual
    KnapsackSolver_knapsack_tests
    GTest::gtest_main)
add_test(KnapsackSolver_knapsack_dynamic_programming_primal_dual_test KnapsackSolver_knapsack_dynamic_programming_primal_dual_test)
set_tests_properties(KnapsackSolver_knapsack_dynamic_programming_primal_dual_test PROPERTIES TIMEOUT 10000)
